Adding, deleting, and editing users and roles

--- a/templates/leases/info.html
+++ b/templates/leases/info.html
@@ -7,7 +7,7 @@
     <div class="col-12 mb-2">
         <h3>{{.data.Title}}</h3>
         <span>
-            <a href="/cluster/leases">(back to all)</a>
+            <a href="/cluster/leases/list">(back to all)</a>
         </span>
     </div>
 
