--- a/templates/keys/info.html
+++ b/templates/keys/info.html
@@ -38,7 +38,7 @@
         <div class="form-group">
             <input type="hidden" name="csrf" value="{{.data.csrf}}">
             <input type="hidden" name="key" value="{{.data.KVItem.Key}}">
-            <a href="/cluster/key/edit/{{.data.KVItem.Key}}" class="btn btn-outline-secondary">Edit</a>
+            <a href="/cluster/key/edit?key={{.data.KVItem.Key}}" class="btn btn-outline-secondary">Edit</a>
             <button class="btn btn-outline-danger" type="submit" value="delete" name="_method">Delete</button>
         </div>
         </form>
