--- a/templates/keys/list.html
+++ b/templates/keys/list.html
@@ -30,7 +30,9 @@
                 title="Create new">New...</a>
 
             <div class="form-group">
-                <input class="form-control" name="filter" value="{{.data.Filter}}" autofocus>
+                <input class="form-control" name="filter"
+                    placeholder="Search prefix"
+                    value="{{.data.Filter}}" autofocus>
             </div>
 
             <div class="form-group input-group mr-2">
