--- a/templates/roles/list.html
+++ b/templates/roles/list.html
@@ -8,6 +8,26 @@
         <h3>{{.data.Title}}</h3>
     </div>
 
+    <div class="col-12 mb-2">
+        <form class="form-inline" action="" method="get">
+            <a href="/cluster/role/create" class="btn btn-outline-primary mr-2"
+                title="Create new">New...</a>
+
+            <div class="form-group">
+                <input class="form-control" name="filter"
+                    placeholder="role search term"
+                    value="{{.data.Filter}}" autofocus>
+            </div>
+
+            <div class="form-group input-group mr-2">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-primary"
+                        type="submit" title="Filter">Search</button>
+                </div>
+            </div>
+        </form>
+    </div>
+
     <div class="col-12">
         <table class="table table-hover table-bordered">
             <thead class="thead-dark">
