Adding, deleting, and editing users and roles

--- a/templates/roles/list.html
+++ b/templates/roles/list.html
@@ -40,7 +40,7 @@
                 {{range $item := .data.Items}}
                 <tr>
                     <td>
-                        <a href="/cluster/role/{{ $item }}">{{ $item }}</a>
+                        <a href="/cluster/role?name={{ $item }}">{{ $item }}</a>
                     </td>
                 </tr>
                 {{ end }}
