Showing if the cluster has auth enabled

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -40,6 +40,10 @@
                     <td>{{if .data.Settings.WithCredentials}}Yes{{else}}No{{end}}</td>
                 </tr>
                 <tr>
+                    <th>Auth Enabled?</th>
+                    <td>{{if .data.Settings.AuthEnabled}}Yes{{else}}No{{end}}</td>
+                </tr>
+                <tr>
                     <th>Connect with SSL?</th>
                     <td>{{if .data.Settings.WithSSL}}Yes{{else}}No{{end}}</td>
                 </tr>
