Tables stype changes to add counters

--- a/templates/keys/list.html
+++ b/templates/keys/list.html
@@ -2,6 +2,12 @@
 
 {{define "custom_css"}}
 <style>
+    .col-num {
+        width: 3rem;
+    }
+    .col-num-val {
+        text-align: right;
+    }
     .col-ttl {
         width: 10rem;
         text-align: center;
@@ -48,14 +54,16 @@
         <table class="table table-bordered table-hover">
             <thead class="thead-dark">
                 <tr>
+                    <th class="col-num">#</th>
                     <th>Key Name</th>
                     <th class="col-ttl">TTL, sec</th>
                 </tr>
             </thead>
 
             <tbody id="items-list">
-                {{range $item := .data.Items}}
+                {{range $idx, $item := .data.Items}}
                 <tr>
+                    <td class="col-num-val">{{inc $idx}}</td>
                     <td>
                         <a href="/cluster/key?key={{ $item.Key }}">{{ $item.Key }}</a>
                     </td>
