--- a/templates/roles/list.html
+++ b/templates/roles/list.html
@@ -1,4 +1,16 @@
 {{ extends "layout.html" }}
+
+{{define "custom_css"}}
+<style>
+    .col-num {
+        width: 3rem;
+    }
+    .col-num-val {
+        text-align: right;
+    }
+</style>
+{{end}}
+
 {{define "content"}}
     <div id="error-block" class="col-12 alert alert-danger" {{ if .data.Error }} style="display: block;" {{ end }}>
         <p>{{ .data.Error }}</p>
@@ -32,13 +44,15 @@
         <table class="table table-hover table-bordered">
             <thead class="thead-dark">
                 <tr>
+                    <th class="col-num">#</th>
                     <th>Role Name</th>
                 </tr>
             </thead>
 
             <tbody id="items-list">
-                {{range $item := .data.Items}}
+                {{range $idx, $item := .data.Items}}
                 <tr>
+                    <td class="col-num-val">{{inc $idx}}</td>
                     <td>
                         <a href="/cluster/role?name={{ $item }}">{{ $item }}</a>
                     </td>
