--- a/templates/roles/create.html
+++ b/templates/roles/create.html
@@ -11,8 +11,6 @@
         </span>
     </div>
 
-    <div>{{.data.Item}}</div>
-
     <div class="col-12 mb-2">
         <form method="post" action="/cluster/role/create">
         <div class="form-group">
@@ -20,8 +18,6 @@
             <thead class="thead-dark">
                 <tr>
                     <th>Role Name</th>
-                    <th>KV Read Ranges / Keys</th>
-                    <th>KV Write Ranges / Keys</th>
                 </tr>
             </thead>
             <tbody>
@@ -35,8 +31,6 @@
                             name="name"
                             maxlength="256">
                     </td>
-                    <td></td>
-                    <td></td>
                 </tr>
             </tbody>
         </table>
@@ -44,13 +38,9 @@
 
         <div class="form-group">
             <input type="hidden" name="csrf" value="{{.data.csrf}}">
-            <button class="btn btn-outline-primary" type="submit">Save</button>
+            <button class="btn btn-outline-primary" type="submit">Create</button>
         </div>
         </form>
-
-        <div>
-            <small class="text-danger"><i>Warning: Changing role names means creating a new role</i></small>
-        </div>
     </div>
 {{end}}
 
