--- a/templates/users/create.html
+++ b/templates/users/create.html
@@ -7,7 +7,7 @@
     <div class="col-12 mb-2">
         <h3>{{.data.Title}}</h3>
         <span>
-            <a href="/cluster/users/list">(back to all)</a>
+            <a href="/cluster/users">(back to all)</a>
         </span>
     </div>
 
