--- a/templates/users/create.html
+++ b/templates/users/create.html
@@ -30,7 +30,7 @@
                             placeholder="Username"
                             autofocus
                             minlength="2"
-                            name="key"
+                            name="name"
                             maxlength="256">
                     </td>
                     <td>
