--- a/templates/users/info.html
+++ b/templates/users/info.html
@@ -47,7 +47,7 @@
                         <input type="checkbox" name="revoke_roles" value="{{$item}}">
                     </td>
                     <td>
-                        <a href="/cluster/role/{{$item}}">{{$item}}</a>
+                        <a href="/cluster/role?name={{$item}}">{{$item}}</a>
                     </td>
                 </tr>
                 {{ end }}
